# vacas-gordas

./: .env.example  README.md  app.py  pyproject.toml
config/: settings.py
database/: __init__.py  connection.py  setup.py
database/repositories/: __init__.py  account_repo.py  base_repo.py  category_repo.py  chat_repo.py  import_repo.py  rule_repo.py  transaction_repo.py
modules/importer/: __init__.py  base_parser.py  csv_reader.py  normalizer.py  ofx_reader.py  pdf_reader.py
modules/importer/banks/: bb_ofx.py  c6_csv.py  generic.py  nubank_csv.py  nubank_pdf.py
scripts/: init_db.py
ui/: __init__.py
ui/components/: __init__.py  charts.py  sidebar.py  transaction_table.py
ui/pages/: __init__.py  categorization.py  chat_page.py  dashboard.py  import_page.py  settings_page.py  transactions.py
