[tool.poetry]
name = "vacas_gordas"
version = "0.1.0"
description = "Controle e monitoramento financeiro pessoal"
authors = ["nfamartins <nfamartins@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python          = ">=3.11,<3.14"
streamlit       = "^1.35"
pymongo         = { extras = ["srv"], version = "^4.7" }
pdfplumber      = "^0.11"
anthropic       = "^0.28"
pandas          = "^2.2"
pydantic        = "^2.7"
pydantic-settings = "^2.3"
plotly          = "^5.22"
python-dotenv   = "^1.0"
ofxparse        = "^0.21"
chardet         = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest      = "^8.0"
pytest-cov  = "^5.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "W", "I", "UP", "F"]
ignore = ["E501"]
